Fixed UI Flicker (Optimization)

--- a/survey/src/css/components/fixedUI.scss
+++ b/survey/src/css/components/fixedUI.scss
@@ -22,9 +22,9 @@
   height: 0.5rem;
 }
 
-.circle-filled {
-  background-image: url("../../vectors/circleFilled.svg");
-}
-.circle-empty {
-  background-image: url("../../vectors/circleEmpty.svg");
-}
+// .circle-filled {
+//   background-image: url("../../vectors/circleFilled.svg");
+// }
+// .circle-empty {
+//   background-image: url("../../vectors/circleEmpty.svg");
+// }
