--- a/survey/src/css/components/multipleChoice.scss
+++ b/survey/src/css/components/multipleChoice.scss
@@ -25,8 +25,4 @@
     background-image: url("../../vectors/circleEmpty.svg");
     background-size: cover;
   }
-
-  .radio.chosen {
-    background-image: url("../../vectors/circleFilled.svg");
-  }
 }
