--- a/survey/src/css/components/question.scss
+++ b/survey/src/css/components/question.scss
@@ -13,21 +13,22 @@
     padding: 1rem;
   }
 
+  .next {
+    margin-top: 4rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
   .next-button {
     color: $textBgColor;
     font-weight: bold;
     cursor: pointer;
-    background-image: url("../../vectors/arrowDown.svg");
     text-align: center;
     background-size: 100%;
     background-repeat: no-repeat;
-    margin: auto;
-    margin-top: 4rem;
+    margin: 0 auto;
     width: 3rem;
     height: 3rem;
-  }
-
-  .next-button.chosen {
-    background-image: url("../../vectors/arrowDownChosen.svg");
   }
 }
